@@ -30,4 +30,4 @@ D/wmlscript////
 /configure.in/1.173/Wed Apr 11 17:06:10 2007//
 /Makefile.in/1.80/Sun Apr 22 11:22:43 2007//
 /aclocal.m4/1.10/Sun Apr 22 11:22:43 2007//
-/ChangeLog/1.2893/Fri Jun  1 11:25:22 2007//
+/ChangeLog/1.2894/Tue Jun 12 14:00:11 2007//
